# esp-at

./: CMakeLists.txt
.github/workflows/: main.yml
components/at/: CMakeLists.txt
components/at/lib/: VERSION
components/clouds/qcloud/lib/: VERSION
components/customized_partitions/raw_data/factory_param/: factory_param_data.csv
components/third_clouds/qcloud/: CMakeLists.txt
components/third_clouds/qcloud/lib/: VERSION
docs/en/AT_Binary_Lists/: ESP32-C3_AT_binaries.md  index.rst
docs/en/AT_Command_Set/: Driver_AT_Commands.rst  index.rst
docs/en/Compile_and_Develop/: How_to_clone_project_and_compile_it.rst  How_to_create_factory_parameter_bin.md  How_to_set_AT_port_pin.rst  How_to_understand_the_differences_of_each_type_of_module.md
docs/zh_CN/AT_Binary_Lists/: ESP32-C3_AT_binaries.md
main/: Kconfig  app_main.c
main/interface/uart/: at_uart_task.c
module_config/module_esp32_default/: sdkconfig_silence.defaults
module_config/module_esp32c3_default/: sdkconfig.defaults  sdkconfig_silence.defaults
module_config/module_esp32c3_qcloud/: README.md  at_customize.csv  sdkconfig.defaults  sdkconfig_silence.defaults
